--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,10 @@
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.0",
-    "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "react-redux": "^7.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
