--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-icons": "^4.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "react-redux": "^7.1.3"
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
